--- a/GameOfThrones/winner.html
+++ b/GameOfThrones/winner.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/winner.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="description" content="The new ruler of Westeros" />
+    <title>Game Of Traps</title>
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/winner.css" />
     <title>Winner</title>
-</head>
+  </head>
 
-<body>
-    <h1>The winner is</h1>
+  <body>
+    <h1></h1>
     <a href="home.html">Play again</a>
     <section>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </section>
-
 
     <script src="https://cdn.jsdelivr.net/npm/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="script/winner.js"></script>
-</body>
-
+  </body>
 </html>
