--- a/GameOfThrones/home.html
+++ b/GameOfThrones/home.html
@@ -23,6 +23,7 @@
     </header>
 
     <main>
+      <div class="loader"></div>
       <div class="intro">
         <h2>
           This is an online two-player board game inspired by Game of Thrones.
