--- a/GameOfThrones/board.html
+++ b/GameOfThrones/board.html
@@ -25,8 +25,10 @@
           will be a few surprises hiding along the way. First player to get
           across and reach the final tile wil be crowned the winner.
         </p>
+        <div class="modal-btn">
         <button class="btn-play">Let's play!</button>
       </div>
+    </div>
     </div>
 
     <header>
