--- a/GameOfThrones/home.html
+++ b/GameOfThrones/home.html
@@ -49,6 +49,6 @@
     <footer>
       <p>© 2020 Game of Traps</p>
     </footer>
-    <script src="script/home.js"></script>
+    <script src="./script/home.js"></script>
   </body>
 </html>
