--- a/GameOfThrones/winner.html
+++ b/GameOfThrones/winner.html
@@ -13,7 +13,7 @@
 
   <body>
     <h1></h1>
-    <a href="home.html">Play again</a>
+    <a href="index.html">Play again</a>
     <section>
       <div></div>
       <div></div>
